# THOR_34_DOF_Humanoid_Optimization_Based_Whole_Body_Control_Simulation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
docs/: THEORY.md  THEORY_APPENDIX.md
scripts/: gen_test_evidence.py  generate_all_plots.py
thor/: __init__.py
thor/config/: __init__.py  config_manager.py  defaults.yaml
thor/control/: centroidal_lqr.py  contact_implicit_mpc.py  contact_planner.py  joint_pd.py  walking_controller.py  whole_body_qp.py
thor/core/: constants.py  spatial.py
thor/dynamics/: __init__.py  aba.py  aba_jit.py  buffers.py  centroidal.py  contact.py  contact_implicit.py  crba.py  crba_jit.py  facade.py  integrators.py  rnea.py  rnea_jit.py
thor/model/: joint_types.py  kinematics.py  kinematics_jit.py  link.py  model_data.py  quaternion.py  robot_model.py  state.py
thor/optimization/: lcp_solver.py
thor/simulation/: __init__.py  mediator.py  observers.py  runner.py  standing.py
thor/tests/: test_algorithms.py  test_analytical_solutions.py  test_centroidal_advanced.py  test_constraint_residual.py  test_contact.py  test_corner_cases.py  test_crba_rnea_cross.py  test_dynamics.py  test_energy_momentum_conservation.py  test_fk_accuracy.py  test_forward_progression.py  test_gait.py  test_integration.py  test_jacobian.py  test_lcp.py  test_lcp_convergence.py  test_numerical_stability.py  test_performance.py  test_quaternion.py  test_spatial.py  test_spatial_advanced.py  test_walking.py
thor/utils/: output_manager.py
thor/visualization/: plots.py  publication_plots.py  (+2 more)
(+12 files in other folders)
